# helix-online-kv

./: Makefile  README.md  pyproject.toml
helix_online_kv/: __init__.py  aging_policy.py  codebook.py  compressed_attention.py  compressed_cache.py  config.py  layer_state.py  pq_attention.py  product_codebook.py  torch_codebook.py  torch_product_codebook.py  torch_vector_codebook.py  triton_attention.py  vector_codebook.py
receipts/: cdc01_compressed_attention_20260325T223621.json  cdc01_compressed_attention_long_20260325T230153.json  cdc01_compressed_attention_short_20260325T230236.json  cdc02_compressed_attention_cdc02-df_20260325T234055.json  cdc02_compressed_attention_cdc02-e_20260325T234519.json  cdc02_compressed_attention_cdc03-sink_20260326T001042.json  cdc02_compressed_attention_cdc03-v2_20260326T001911.json  cdc02_compressed_attention_cdc03_20260326T000154.json  cdc02_compressed_attention_compat-check_20260325T233410.json  cdc03_hybrid_layers1_21_20260326T100511.json  codebook_generalization_20260325T202936.json  e2e_compressed_20260325T205041.json  online_encoder_20260325T203212.json  ppl_sweep_20260325T204346.json  tiered_memory_20260325T203218.json
tests/: test_aging.py  test_codebook.py  test_compressed_attention.py  test_compressed_cache.py  test_pq_attention.py  test_product_codebook.py  test_session_persistence.py  test_torch_codebook.py  test_torch_product_codebook.py  test_torch_vector_codebook.py  test_triton_attention.py  test_vector_codebook.py
tools/: bench_compressed_attention.py  bench_online_encoder.py  bench_ppl_sweep.py  (+5 more)
